fixed on hover tooltip flickering

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 #point-tooltip, #district-tooltip, #bar-tooltip{
     position: absolute;
+    pointer-events: none;
 }
 
 body {
